--- a/jeremy-vue/package.json
+++ b/jeremy-vue/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.6.1",
     "file-loader": "^1.1.11",
+    "jwt-decode": "^2.2.0",
     "url-loader": "^0.5.9",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
